tests/baselines/reference/invalidNestedModules.errors.txt
==== tests/cases/compiler/invalidNestedModules.ts (2 errors) ====
    module A.B.C {
        export class Point {
            x: number;
            y: number;
        }
    }
    
    module A {
        export module B {
            export class C { // Error
                         ~
!!! error TS2000: Duplicate identifier 'C'.
                name: string;
            }
        }
    }
    
    module M2.X {
        export class Point {
            x: number; y: number;
        }
    }
    
    module M2 {
        export module X {
            export var Point: number; // Error
                       ~~~~~
!!! error TS2000: Duplicate identifier 'Point'.
        }
    }
    
    
    